# blackbox-qa

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval.yml
docs/tracing/: README.md
evals/: README.md  ab_benchmark.py  ablation.json  answers.json  baseline.json  confidence_calibration.json  metrics.py  run.py
evals/fixtures/: build_fixture.py  ci_baseline.json  seed.sql
evals/gold/: retrieval_gold.example.jsonl  retrieval_gold.jsonl
sql/: schema.sql
src/blackbox_qa/: __init__.py  agent.py  api.py  chunking.py  cli.py  config.py  db.py  embeddings.py  ingest.py  judge.py  llm.py  observability.py  rerank.py  retrieval.py  tools.py
src/blackbox_qa/graph/: __init__.py  build.py  run_hitl.py  tools_lc.py
tests/: conftest.py  test_agent.py  test_calibration.py  test_chunking.py  test_judge.py  test_llm.py  test_metrics.py  test_observability.py  test_rrf.py  test_tools.py
