[project]
name = "blackbox-qa"
version = "0.0.1"
description = "Agentic Q&A over public NTSB aviation incident reports: hybrid retrieval, tool-calling agent, eval-gated CI."
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
authors = [{ name = "Aadhav Bharadwaj" }]

# Versions are resolved + pinned in poetry.lock (run `poetry lock` to refresh).
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psycopg[binary]",
    "pgvector",
    "sentence-transformers",
    "openai",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "numpy",
]

[project.optional-dependencies]
# `poetry install --extras observability` (or `pip install ".[observability]"`)
observability = ["langfuse"]

[project.scripts]
blackbox-qa = "blackbox_qa.cli:main"

[tool.poetry]
packages = [{ include = "blackbox_qa", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
mypy = "*"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
